--- a/javagachigame/build.gradle
+++ b/javagachigame/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'groovy'
     id 'java'
     id 'java-library'
+    id 'application'
 }
 
 group 'org.example'
@@ -18,6 +19,9 @@ dependencies {
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
     compile 'com.intellij:forms_rt:7.0.3'
+    implementation 'com.intellij:forms_rt:7.0.3'
+    runtime 'com.intellij:forms_rt:7.0.3'
+
 }
 
 test {
@@ -32,3 +36,4 @@ jar {
         )
     }
 }
+mainClassName = 'driver.Driver'
