Adds Banner, adds safety against file not found for savedgame.dat by forcing newgame when file not detected.
Updates gradle Jar task for javagachigame subproject to include necessary dependencies for execution

--- a/javagachigame/build.gradle
+++ b/javagachigame/build.gradle
@@ -5,8 +5,8 @@ plugins {
     id 'application'
 }
 
-group 'org.example'
-version '1.0-SNAPSHOT'
+group 'org.javagachi'
+version '0.2-SNAPSHOT'
 
 repositories {
     mavenCentral()
